Refactor annotations